--- a/css/userLoginReg.css
+++ b/css/userLoginReg.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("../../assets/admin-bg.jpg");
+  background-image: url("../assets/user-bg.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -14,9 +14,17 @@ h1 {
   text-align: center;
 }
 
-p {
-  color: red;
+h3 {
   text-align: center;
+}
+
+a {
+  color: #6fb98f;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 .nav-h {
@@ -42,8 +50,15 @@ p {
   justify-content: center;
 }
 
-.adminLogin {
+.userLogin {
   width: 400px;
+}
+
+.userReg {
+  width: 500px;
+}
+
+.user {
   height: max-content;
   padding: 30px;
   display: flex;
@@ -61,12 +76,12 @@ p {
   box-shadow: 0px 0px 10px 10px rgba(255, 255, 255, 0.1);
 }
 
-.adminLogin label {
+.user label {
   font-weight: bold;
   font-size: 16px;
 }
 
-.adminLogin input[type="text"],
+.user input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="tel"] {
@@ -81,7 +96,7 @@ input[type="tel"] {
   font-size: 16px;
 }
 
-.adminLogin button {
+.user button {
   width: 100%;
   height: 48px;
   margin: 20px 0px;
@@ -95,9 +110,19 @@ input[type="tel"] {
   border-radius: 10px;
 }
 
-.adminLogin button:hover {
+.user button:hover {
   cursor: pointer;
   background: #6fb98f;
   color: black;
   transition: 0.5s;
+}
+
+.warning {
+  color: red;
+  text-align: center;
+}
+
+.success {
+  color: lightgreen;
+  text-align: center;
 }
