--- a/css/adminForm.css
+++ b/css/adminForm.css
@@ -21,16 +21,43 @@ input {
   border-radius: 5px;
 }
 
-input:hover {
+textarea {
+  padding: 10px;
+  color: white;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 5px;
+  resize: none;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+select {
+  width: 150px;
+  height: 36px;
+  padding-left: 10px;
+  color: white;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 5px;
+}
+
+input:hover,
+textarea:hover,
+select:hover {
   border: 1px solid rgba(255, 255, 255, 0.5);
   transition: 0.3s;
 }
 
-input:focus {
+input:focus,
+textarea:focus select:focus {
   border: 1px solid rgba(255, 255, 255, 1);
 }
 
-input:focus::placeholder {
+input:focus::placeholder,
+textarea:focus::placeholder {
   color: transparent;
 }
 
@@ -52,6 +79,30 @@ button:hover {
   background: #6fb98f;
   color: black;
   transition: 0.5s;
+}
+
+.backBt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 36px;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  border-radius: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+.backBt:hover {
+  cursor: pointer;
+  background-color: rgba(111, 185, 143, 0.5);
+  transition: 0.5s;
+}
+
+#backA {
+  color: white;
 }
 
 .warning {
