--- a/css/userLoginReg.css
+++ b/css/userLoginReg.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("../assets/user-bg.jpg");
+  background-image: url("../assets/user-bg.jpg"),
+    url("../../assets/admin-bg.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
