--- a/css/adminTable.css
+++ b/css/adminTable.css
@@ -5,7 +5,7 @@
 table,
 th,
 td {
-  border: 1px solid white;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   border-collapse: collapse;
 }
 
