--- a/css/tables.css
+++ b/css/tables.css
@@ -1,7 +1,3 @@
-.disabled {
-  pointer-events: none;
-}
-
 table,
 th,
 td {
@@ -30,6 +26,10 @@ td {
 
 .thLeft {
   text-align: left;
+}
+
+.descr {
+  width: 40%;
 }
 
 .body {
@@ -61,4 +61,8 @@ td {
 .success2 {
   color: lightgreen;
   margin-top: 0px;
+}
+
+.disabled {
+  pointer-events: none;
 }
