--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,14 @@
   padding: 0;
   font-family: sans-serif;
 }
+
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-    url(b1.jpg);
-  background-size: cover;
-  background-position: center;
+    url(assets/index-bg.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .navbar {
@@ -18,21 +21,25 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 .logo {
   width: 120px;
   cursor: pointer;
 }
+
 .navbar ul li {
   list-style: none;
   display: inline-block;
   margin: 0 20px;
   position: relative;
 }
+
 .navbar ul li a {
   text-decoration: none;
   color: rgb(235, 235, 235);
   text-transform: uppercase;
 }
+
 .navbar ul li::after {
   content: "";
   height: 3px;
@@ -43,9 +50,11 @@ body {
   bottom: -10px;
   transition: 0.5s;
 }
+
 .navbar ul li:hover::after {
   width: 100%;
 }
+
 .content {
   width: 100%;
   position: absolute;
@@ -54,15 +63,18 @@ body {
   text-align: center;
   color: #fff;
 }
+
 .content h1 {
   font-size: 50px;
   margin-top: 180px;
 }
+
 .content p {
   margin: 50px 50px;
   font-weight: 100;
   line-height: 25px;
 }
+
 button {
   width: 200px;
   padding: 15px 0;
